<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/heder_height"
        android:background="@color/header_footer_color" >

        <ImageView
            android:id="@+id/id_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back_arrow_green"
            android:layout_marginLeft="10dip"/>
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/too_many_members"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="20dip"
        android:text="@string/have_large_list"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="20dip"
        android:text="@string/have_an_excel"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/id_email_us"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="20dip"
        android:autoLink="email"
        android:text="@string/email_us_and"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/id_back_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="20dip"
        android:text="@string/back_large"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

</LinearLayout>