<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_chat_home"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/id_header_view"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/heder_height"
        android:background="@color/header_footer_color" >

        <com.superchat.widgets.MyriadSemiboldTextView
            style="@style/style_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/privacy_settings" />

        <ImageView
            android:id="@+id/id_xmpp_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/red_dot"
            android:visibility="gone" />

        <TextView
            android:id="@+id/id_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:capitalize="characters"
            android:drawableLeft="@drawable/back_arrow_white"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/chat_privacy_settings"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/for_personal_messages_only"
        android:textColor="@color/dark_gray"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/id_all_msg_allow_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/id_all_msg_allow_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/radio1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_messages_from_everyone"
            android:textColor="@color/greytext_on_white_light"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_no_msg_allow_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/id_no_msg_allow_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/radio1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_allow_any_private_messages"
            android:textColor="@color/greytext_on_white_light"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView android:id="@+id/id_no_one_msg_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:text="@string/no_one_can_message_you"
        android:textColor="@color/red1"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/super_admins_can_always_message_you"
        android:textColor="@color/red1"
        android:textSize="17sp" />

</LinearLayout>