<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_login_change_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:gravity="center"
        android:padding="1dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="1dip"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dip"
            android:paddingRight="20dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
               android:layout_centerInParent="true"
                android:background="@color/header_footer_color"
                android:padding="5dip"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="15dip"
                android:visibility="visible">

                <TextView
                    android:id="@+id/id_new_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_group"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:textSize="20sp" 
                    android:textStyle="bold"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/id_new_broad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                    android:text="@string/new_broadcast"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp" 
                    android:visibility="invisible"/>
            </RelativeLayout>

            <AutoCompleteTextView
                android:id="@+id/id_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/round_rect"
                android:hint="@string/type_group_name"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="@color/text_color_grayblack"
                android:textSize="15sp"
                android:textStyle="normal" />

            <CheckBox android:id="@+id/id_admin_check"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dip" >

                <Button
                    android:id="@+id/id_add"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/rounded_button_orange"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/header_color"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/id_cancel"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dip"
                    android:layout_marginTop="10dip"
                    android:layout_toRightOf="@id/id_add"
                    android:background="@drawable/rounded_button_orange"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/header_color"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>